fix header spacing

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -18,11 +18,11 @@ div .top-navigation {
   background-color: lightgray;
 }
 .top-navigation {
-  height: 80px;
+  display: table;
+  width: 100%
 }
 .nav-item {
   position: relative;
-  top: 50%;
   padding: 1ex;
 }
 .nav-item * {
